# FITLabs2ndCourse

с++/: main.cpp  map.h  optimalPlayer.h  player.h
с++/lab0/: CMakeLists.txt  OOP C++ Task 0 (intro).docx  countingWords.cpp  countingWords.h  main.cpp  todo.txt
с++/lab1/: 2016 OOP Task 1.docx  CMakeLists.txt  main.cpp  mytests.txt  todo.txt  trit.cpp  trit.h  tritSet.cpp  tritSet.h
с++/lab2/: CMakeLists.txt  blocksParser.cpp  blocksParser.h  dumpBlock.cpp  dumpBlock.h  grepBlock.cpp  grepBlock.h  main.cpp  readFileBlock.cpp  readFileBlock.h  replaceBlock.cpp  replaceBlock.h  sortBlock.cpp  sortBlock.h  todo.txt  worker.h  workflow.cpp  workflow.h  writeFileBlock.cpp  writeFileBlock.h
с++/lab3/: CMakeLists.txt  baseOfGame.cpp  baseOfGame.h  interactivePlayer.cpp  interactivePlayer.h  map.cpp  optimalPlayer.cpp  player.cpp  randomPlayer.cpp  randomPlayer.h  todo.txt
с++/lab4/: CMakeLists.txt
с++lab4/: CSVParser.h  main.cpp  todo.txt
